--- a/styles/main.css
+++ b/styles/main.css
@@ -459,10 +459,12 @@ img {
 .bar .barctn {
 	position: relative;
 	width: 100%;
-	height: 15px;
+	height: 10px;
+	margin-bottom: 5px;
 	background: hsl(222, 5%, 70%);
 	box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.3),
 		inset 0 -3px 5px rgba(255, 255, 255, 0.25);
+	border-radius: 20px;
 	overflow: hidden;
 }
 
@@ -481,6 +483,14 @@ img {
 	position: absolute;
 	height: 100%;
 	display: block;
+}
+
+.bar h6 span.azimio {
+	background: hsl(28, 96%, 54%);
+}
+
+.bar h6 span.uda {
+	background: hsl(48, 99%, 51%);
 }
 
 .bar .barctn .race1 {
@@ -846,7 +856,7 @@ img {
 }
 
 .apcr .agano.cadctn {
-	--partyCol: #5614b5;
+	--partyCol: #370e91;
 }
 
 .apcr .roots.cadctn {
@@ -855,7 +865,8 @@ img {
 
 .apcr .cadctn .nmpt h6,
 .apcr .cadctn .accm h6,
-.apcr .votes .accm h5 {
+.apcr .votes .accm h5,
+.bar h6 .p-name {
 	color: #fff;
 	font-size: 10px;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
@@ -918,7 +929,9 @@ img {
 	box-shadow: inset 2px 2px 5px rgba(255, 255, 255, 0.25),
 		inset -2px -3px 5px rgba(0, 0, 0, 0.3); 
 }
-.apcr .nmpt h6 .p-name{
+
+.apcr .nmpt h6 .p-name,
+.bar h6 .p-name{
 	background: var(--partyCol);
 	font-size: .5rem;
 	box-shadow: inset 2px 2px 5px rgba(255, 255, 255, 0.25),
