--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,14 @@
 * {
 	scroll-behavior: smooth;
 	user-select: none;
+	box-sizing: border-box;
 }
 
-html,
+/* html,
 body{
 	overflow-x: hidden;
 	max-width: 100%;
-}
+} */
 a {
 	text-decoration: none;
 }
@@ -248,10 +249,8 @@ body {
 .p-elect-ctn .p-elect-desc {
 	position: relative;
 	color: #fff;
-	margin-left: 10px;
+	margin-left: 20px;
 	white-space: nowrap;
-	height: 100%;
-	max-height: 250px;
 }
 
 .p-elect-ctn .p-elect-desc h3 {
@@ -263,19 +262,46 @@ body {
 	text-align: right;
 }
 
-.p-elect-ctn .p-elect-desc p {
+.nome h6{
+	margin: 0;
+	font-size: .8rem;
+}
+.nome h2{
+	margin: 0;
+	line-height: 1.6rem;
 	font-size: 2rem;
-	line-height: 1.8rem;
+	font-weight: lighter;
+}
+.elected .check {
+	position: relative;
+	width: 50px;
+	height: 50px;
+	z-index:2;
 }
 
-.h5spcheck {
-	display: flex;
+.elected .check::before{
+	width:60%;
+	height:60%;
+	border:2px solid #3a0;
+	content:"";
+	top:50%;
+	left:50%;
+	transform:translate(-50%, -50%);
+	position:absolute;
+	z-index:-1;
+}
+.elected .check img {
+	filter:drop-shadow(1px 1px 3px #0008);
+} 
+.h5spcheck{
 	margin-top: 5px;
-	justify-content: space-between;
 }
 
 .h5spcheck .h5sp {
 	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	padding-left: 40px;
 	box-shadow: 0 0 0 1px #fff;
 }
 
@@ -290,11 +316,11 @@ body {
 	color: #000;
 }
 
-.h5spcheck .check {
-	position: relative;
-	width: 35px;
-	height: 35px;
-	background: #390;
+.h5spcheck .p p {
+	font-size: 2rem;
+	line-height: 2rem;
+	font-weight: 500;
+	margin: 0;
 }
 
 .body-err {
@@ -743,7 +769,7 @@ img {
 .mdlbox .seat .apcr {
 	position: relative;
 	width:100%;
-	box-shadow: 0 0 0 1px #ddd;
+	box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.25), 0 3px 0 0 rgba(0, 0, 0, 0.25);
 	border-radius: 5px;
 	max-width:400px;
 	margin:0 auto;
@@ -753,7 +779,6 @@ img {
 .progres .cadts,
 .progres .map,
 .progres .seat{
-	box-shadow: 0 0 0 1px #ddd;
 	border-radius: 5px;
 	padding:10px;
 	margin:0;
@@ -766,6 +791,7 @@ img {
 	grid-row: 1 / span 2;
 	padding-top:10px;
 	background:#fff;
+	border: solid 1px rgba(0, 0, 0, 0.15);
 }
 
 .map .cnty {
@@ -797,7 +823,8 @@ img {
 	height: 12px;
 	margin-right: 10px;
 	display: inline-block;
-	border: 1px solid rgba(0, 0, 0, 0.9);
+	border:solid 1px rgba(0, 0, 0, 0.25);
+	border-radius: 2px;
 	--bg: hsl(222, 5%, var(--lgt));
 	background: var(--bg);
 }
@@ -876,6 +903,7 @@ img {
 }
 .pgsrctn .cnty .card {
 	padding:30px 0;
+	box-shadow: 0 3px 0 0 rgba(0, 0, 0, 0.25);
 }
 
 .apcr .cadctn {
