--- a/styles/main.css
+++ b/styles/main.css
@@ -645,7 +645,6 @@ img {
 .mapid {
 	position: relative;
 	background: #002e63;
-        padding:7px 0;
 	color: #def;
 	box-shadow: 0 3px 7px #ddd;
 }
@@ -823,7 +822,7 @@ img {
 	height: 12px;
 	margin-right: 10px;
 	display: inline-block;
-	border:solid 1px rgba(0, 0, 0, 0.25);
+	box-shadow:0 0 1px #000;
 	border-radius: 2px;
 	--bg: hsl(222, 5%, var(--lgt));
 	background: var(--bg);
