--- a/styles/main.css
+++ b/styles/main.css
@@ -687,16 +687,16 @@ img {
 .mapid h2,
 .mdlbox .seat h3 {
 	text-align: center;
+	font-weight:500;
+	padding:15px 0;
 	border: none;
 }
 .mdlbox .seat h3 {
-	margin:0;
-	padding:10px 0;
+	margin: 0;
 }
 
 .mapid h2 {
 	font-size: 1.2rem;
-	padding: 10px 40px;
 }
 
 .mdlbody {
@@ -761,8 +761,7 @@ img {
 	height: 100%;
 	overflow: hidden;
 	overflow-y: auto;
-	padding: 0 10px;
-	padding-bottom: 20px;
+	padding: 15px 10px;
 }
 
 .mdlbox .seat .apcr {
@@ -771,7 +770,7 @@ img {
 	box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.25), 0 3px 0 0 rgba(0, 0, 0, 0.25);
 	border-radius: 5px;
 	max-width:400px;
-	margin:0 auto;
+	margin:auto;
 	padding: 5px 10px 10px;
 	background: #fff;
 }
