--- a/styles/main.css
+++ b/styles/main.css
@@ -821,7 +821,7 @@ img {
 	height: 12px;
 	margin-right: 10px;
 	display: inline-block;
-	box-shadow:0 0 1px #000;
+	border:1px solid #000;
 	border-radius: 2px;
 	--bg: hsl(222, 5%, var(--lgt));
 	background: var(--bg);
