--- a/styles/main.css
+++ b/styles/main.css
@@ -770,6 +770,7 @@ img {
 	overflow: hidden;
 	overflow-y: auto;
 	padding: 15px 10px;
+	padding-bottom: 40px;
 }
 
 .mdlbox .seat .apcr {
@@ -779,7 +780,7 @@ img {
 	border-radius: 5px;
 	max-width:400px;
 	margin:auto;
-	padding: 5px 10px 10px;
+	padding: 5px 10px 40px;
 	background: #fff;
 }
 .progres .cadts,
