--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
 	--alp:1;
 	--blue:rgb(10, 110, 214);
 	--yellow:rgb(255, 193, 7);
-	--indigo:rgb(102, 16, 242);
+	--indigo:#5620c2;
 	--red:rgb(220, 53, 69);
 	--green:rgb(25, 135, 84);
 	--orange:rgb(253, 126, 20);
@@ -830,7 +830,6 @@ img {
 	height: 12px;
 	margin-right: 10px;
 	display: inline-block;
-	box-shadow:0 0 0 1px var(--dark);
 	background: var(--gray);
 }
 
