--- a/styles/main.css
+++ b/styles/main.css
@@ -108,7 +108,7 @@ body {
 	top:10%;
 	transform:translateX(-50%);
 	border-radius:50%;
-	background: var(--orange);
+	background: var(--blue);
 	z-index:-1;
 }
 .ctn .box .img.wsr::before{
@@ -526,7 +526,7 @@ img {
 .bar .barctn {
 	position: relative;
 	width: 100%;
-	height: 10px;
+	height: 12px;
 	margin-bottom: 5px;
 	background: var(--gray);
 	box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.25),
